--- a/app/assets/templates/tools/detail.html
+++ b/app/assets/templates/tools/detail.html
@@ -251,12 +251,12 @@
 				</div>
 			</div>
 
-			<!-- People also viewed -->
+			<!-- People also accessed -->
 			<div class="row">
 				<div class="col-md-12">
 					<div class="panel panel-default">
 						<div class="panel-heading">
-							<h3 class="panel-title">People also viewed</h3>
+							<h3 class="panel-title">People also accessed</h3>
 						</div>
 						<div class="panel-body">
 							<div class="row" ng-repeat="tool in data.also">
