--- a/app/assets/templates/tools/featured.html
+++ b/app/assets/templates/tools/featured.html
@@ -34,11 +34,11 @@
               	</div>
             	</div>
 
-            	<div class="row">
+<!--             	<div class="row">
             		<div class="col-sm-12">
             			{{tool.description}}
             		</div>
-            	</div>
+            	</div> -->
             
             </div>
           </li>
@@ -91,11 +91,11 @@
               	</div>
             	</div>
 
-            	<div class="row">
+<!--             	<div class="row">
             		<div class="col-sm-12">
             			{{tool.description}}
             		</div>
-            	</div>
+            	</div> -->
             
             </div>
           </li>
