--- a/app/assets/templates/tool_lists/detail.html
+++ b/app/assets/templates/tool_lists/detail.html
@@ -5,7 +5,14 @@
 		<div class="col-md-9">
 			<div class="panel panel-default">
 			  <div class="panel-heading">
-			    <h3 class="panel-title">{{data.name}}</h3>
+			    	<div class="row">
+							<div class="col-sm-10">
+							<h1>{{data.name}}</h1>
+							</div>
+							<div class="col-sm-2">
+								<a ng-if="can_edit" href="/tool_lists/edit/{{data.id}}" class="btn btn-primary">Edit</a>
+							</div>
+						</div>
 			  </div>
 			  <div class="panel-body">
 			  	<div class="well">
