--- a/app/assets/templates/tool_lists/detail.html
+++ b/app/assets/templates/tool_lists/detail.html
@@ -72,7 +72,11 @@
 					    <h3 class="panel-title">Related lists</h3>
 					  </div>
 					  <div class="panel-body">
-						Panel content	    
+							<ul>
+								<li ng-repeat="list in related_lists">
+									<a href="/tool_lists/{{list.id}}">{{list.name}}</a>
+								</li>
+							</ul>	    
 					  </div>
 					</div>
 				</div>
