Fixed bug on tool edit page

--- a/app/assets/templates/tools/edit.html
+++ b/app/assets/templates/tools/edit.html
@@ -54,7 +54,7 @@
     <div class="form-group">
       <label for="inputStars" class="col-sm-2 control-label">Rating</label>
       <div class="col-sm-6 rating">
-        <div star-rating rating-value="data.tool_ratings[0].stars" max="5"></div>
+        <div star-rating rating-value="data.tool_ratings[0].stars" max="5" is-interactive="true"></div>
       </div>
     </div>   
 
