Compromise change on where data is gathered. this will change once we redefine tool serialization.

--- a/app/assets/templates/tapor/index.html
+++ b/app/assets/templates/tapor/index.html
@@ -154,7 +154,7 @@
 			</div>
 			<div class="panel-body">
 				<div ng-repeat="comment in latest_comments" class="well well-sm">
-					{{comment.user.name}}	said: {{comment.content}}
+					{{comment.user.name}}	said on {{comment.tool.name}}: {{comment.content}}
 				</div>
 			</div>
 		</div>
