--- a/app/assets/templates/tapor/index.html
+++ b/app/assets/templates/tapor/index.html
@@ -55,7 +55,7 @@
     <span class="fa fa-chevron-left" aria-hidden="true"></span>
     <span class="sr-only">Previous</span>
   </a>
-  <a class="right carousel-control" role="button" ng-click="carousel_prev()">
+  <a class="right carousel-control" role="button" ng-click="carousel_next()">
     <span class="fa fa-chevron-right" aria-hidden="true"></span>
     <span class="sr-only">Next</span>
   </a>
