Changed controllers names

--- a/app/assets/templates/tool_lists/contributing.html
+++ b/app/assets/templates/tool_lists/contributing.html
@@ -1,7 +1,7 @@
 
 
 
-<div ng-controller='ListsContributingCtrl' class='tapor-container'>
+<div ng-controller='ListsContributingController' class='tapor-container'>
 	
 	<div class="row">
 		<div class="col-sm-1">
