--- a/app/assets/templates/tool_lists/edit.html
+++ b/app/assets/templates/tool_lists/edit.html
@@ -1,4 +1,4 @@
-<div ng-controller='ListsEditCtrl' class='tapor-container'>
+<div ng-controller='ListsEditController' class='tapor-container'>
   <div class="row">
   	<div class="col-sm-6">
   		<div class="row">
