--- a/app/assets/templates/tools/detail_OLD.html
+++ b/app/assets/templates/tools/detail_OLD.html
@@ -1,4 +1,4 @@
-<div ng-controller='ToolsDetailCtrl' class='tapor-container'>
+<div ng-controller='ToolsDetailController' class='tapor-container'>
   <div class='row'>
 	  <form class="form-horizontal" role="form">
 
