--- a/app/assets/templates/tools/featured.html
+++ b/app/assets/templates/tools/featured.html
@@ -1,4 +1,4 @@
-<div ng-controller='ToolsFeaturedCtrl' class='tapor-container'>
+<div ng-controller='ToolsFeaturedController' class='tapor-container'>
 
 	<div class="row">
   	<div class="col-sm-6">
