--- a/app/assets/templates/tools/index.html
+++ b/app/assets/templates/tools/index.html
@@ -1,4 +1,4 @@
-<div ng-controller='ToolsIndexCtrl' class='tapor-container'>
+<div ng-controller='ToolsIndexController' class='tapor-container'>
 	<div class='row tool-list-entry' ng-repeat="tool in tools track by $index">
 		
 		<div class='col-md-3 tool-list-entry-image'>
