--- a/app/assets/templates/users/index.html
+++ b/app/assets/templates/users/index.html
@@ -1,4 +1,4 @@
-<div ng-controller='UsersIndexCtrl' class='tapor-container'>
+<div ng-controller='UsersIndexController' class='tapor-container'>
 	<div class="row">
 		<div class="col-md-12">
 			<table class="table table-striped">
