--- a/app/assets/templates/tool_lists/detail_OLD.html
+++ b/app/assets/templates/tool_lists/detail_OLD.html
@@ -1,4 +1,4 @@
-<div ng-controller='ListsDetailCtrl' class='tapor-container'>
+<div ng-controller='ListsDetailController' class='tapor-container'>
 	
 	<div class="row">
 		<div class="col-sm-10">
