--- a/app/assets/templates/tools/edit.html
+++ b/app/assets/templates/tools/edit.html
@@ -1,5 +1,5 @@
 
-<div ng-controller='ToolsEditCtrl' class='tapor-container'>
+<div ng-controller='ToolsEditController' class='tapor-container'>
   <div class='row'>
   <form id="tool_form" class="form-horizontal" role="form">
     
