--- a/app/assets/templates/users/detail.html
+++ b/app/assets/templates/users/detail.html
@@ -1,4 +1,4 @@
-<div ng-controller='UsersDetailCtrl' class='tapor-container'>
+<div ng-controller='UsersDetailController' class='tapor-container'>
 	<div class='row'>
 		<form class="form-horizontal" role="form">
 		<!-- image -->
