--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 	</head>
 	<body>
 		<div class="container">
-			<div ng-controller="TaporMainCtrl"> 
+			<div ng-controller="TaporMainController"> 
 				<!-- nav -->
 				<div class="row" id="nav">
 					<div class="col-md-12 text-right">
