Working on pages

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -137,3 +137,11 @@ body {
 #imageContainer {
 	/*max-width: 550px;*/
 }
+
+.ace_editor { 
+	height: 400px; 
+}
+
+.mce-tinymce {
+	height: 400px
+}
