--- a/app/assets/templates/tapor/index.html
+++ b/app/assets/templates/tapor/index.html
@@ -1,5 +1,5 @@
 
-<div ng-controller='TaporIndexCtrl' class='tapor-container'>
+<div ng-controller='TaporIndexController' class='tapor-container'>
 <div class='row'>
 	<div class="col-md-12">
 	
