--- a/app/assets/templates/tool_lists/edit.html
+++ b/app/assets/templates/tool_lists/edit.html
@@ -56,7 +56,7 @@
 
               <div class="input-group">
 
-                <input type="text" class="form-control" id="listName" placeholder="Unamed list" ng-model="data.name" required>
+                <input type="text" class="form-control" id="listName" placeholder="Name your list" ng-model="data.name" required>
                 <span class="input-group-addon">
                   Publish <input type="checkbox" name="is_public" value="is_public" id="inputIsPublic" ng-model="data.is_public">
                 </span>
@@ -74,7 +74,7 @@
   				<div class="row">
   					<div class="col-sm-12">					
   						<h5>Description</h5>
-  						<textarea class="form-control noresize-textarea" rows="3" id="inputDescription" ng-model="data.description"></textarea>					
+  						<textarea class="form-control noresize-textarea" rows="3" id="inputDescription" ng-model="data.description" placeholder="About your list"></textarea>					
   					</div>
   				</div> 
           </form>
