--- a/app/assets/javascripts/angular/app.js.erb
+++ b/app/assets/javascripts/angular/app.js.erb
@@ -1,6 +1,6 @@
 'use strict';
 
-var app = angular.module("taporApp", ["ngResource", "ngRoute", "selectize", "ui.sortable"]);
+var app = angular.module('taporApp', ['ngResource', 'ngRoute', 'selectize', 'ui.sortable', 'ui.ace', 'ui.tinymce']);
 
 app.config(['$httpProvider', function($httpProvider){
   $httpProvider.defaults.headers.common['X-CSRF-Token'] = $('meta[name=csrf-token]').attr('content');
@@ -101,6 +101,20 @@ app.config(['$routeProvider', '$locationProvider',
       .when('/tool_lists/:id', {
         templateUrl: "<%= asset_path('tool_lists/detail.html') %>",
       })
+      .when('/pages', {
+        templateUrl: "<%= asset_path('pages/index.html') %>",
+      })
+      .when('/pages/new', {
+        templateUrl: "<%= asset_path('pages/edit.html') %>",
+      })
+      .when('/pages/edit/:name', {
+        templateUrl: "<%= asset_path('pages/edit.html') %>",
+      })
+      .when('/pages/:name', {
+        templateUrl: "<%= asset_path('pages/detail.html') %>",
+      })
+
+
   }]);
 
 
