--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,5 +15,6 @@
  *= require selectize/dist/css/selectize.bootstrap3.css
  *= require ng-sortable/dist/ng-sortable.css
  *= require ng-sortable/dist/ng-sortable.style.css
+ *= require bootstrap-toggle/css/bootstrap-toggle.css
  *= require style
  */
