--- a/app/assets/templates/tools/edit.html
+++ b/app/assets/templates/tools/edit.html
@@ -15,7 +15,7 @@
     <div class="form-group">
       <label for="inputName" class="col-sm-2 control-label">URL</label>
       <div class="col-sm-6">
-        <input type="text" class="form-control" id="inputURL" placeholder="URL" ng-model="data.url" required>
+        <input type="text" class="form-control" id="inputURL" placeholder="URL" ng-model="data.url">
       </div>
     </div>
 
@@ -45,36 +45,7 @@
     <div class="form-group">
       <label for="inputDescription" class="col-sm-2 control-label">Description</label>
       <div class="col-sm-6	">
-        <textarea class="form-control vertical-text-area" rows="3" id="inputDescription" ng-model="data.description"></textarea>
-      </div>
-    </div>
-
-    <!-- stars -->
-
-    <div class="form-group">
-      <label for="inputStars" class="col-sm-2 control-label">Rating</label>
-      <div class="col-sm-6 rating">
-        <div star-rating rating-value="data.tool_ratings[0].stars" max="5" is-interactive="true"></div>
-      </div>
-    </div>   
-
-    <!-- tags -->
-
-    <div class="form-group">
-      <label for="inputTags" class="col-sm-2 control-label">Tags</label>
-      <div class="col-sm-6">
-        <!-- <input type="text" class="form-control" id="inputTags" placeholder="Tags" ng-model="data.tool_tags.tags"> -->
-        <selectize config="tag_config" options='tag_options' ng-model="data.tags"></selectize>
-
-      </div>
-    </div>
-
-    <!-- comment -->
-
-    <div class="form-group">
-      <label for="inputComment" class="col-sm-2 control-label">Comment</label>
-      <div class="col-sm-6  ">
-        <textarea class="form-control vertical-text-area" rows="3" id="inputComment" ng-model="data.comments[0].content"></textarea>
+        <textarea class="form-control vertical-text-area" rows="3" id="inputDescription" ng-model="data.description" placeholder="About your tool"></textarea>
       </div>
     </div>
 
@@ -113,7 +84,7 @@
         <ul>
           <li class="checkbox">
             <label>
-              <input type="checkbox" name="is_approved" value="is_approved" id="inputApproved" ng-model="data.is_approved">
+              <input toggle-checkbox type="checkbox" name="is_approved" value="is_approved" id="inputApproved" ng-model="data.is_approved" data-on="Yes" data-off="No">
             </label>
           </li>
         </ul>
