--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,5 +16,6 @@
  *= require ng-sortable/dist/ng-sortable.css
  *= require ng-sortable/dist/ng-sortable.style.css
  *= require bootstrap-toggle/css/bootstrap-toggle.css
+ *= require jqcloud2/dist/jqcloud
  *= require style
  */
