--- a/app/assets/templates/tapor/index.html
+++ b/app/assets/templates/tapor/index.html
@@ -2,68 +2,22 @@
 <div ng-controller='TaporIndexController' class='tapor-container'>
 <div class='row'>
 	<div class="col-md-12">
-	
-
-	<!--  -->
-
-	<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-  <!-- Indicators -->
-  <ol class="carousel-indicators">
-    <!-- <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-    <li data-target="#carousel-example-generic" data-slide-to="1"></li> -->
-    <li ng-repeat="tool in featured track by $index" data-target="#carousel-example-generic" data-slide-to="{{$index}}" ng-class="{active: $first }"></li>
-  </ol>
-
-  <!-- Wrapper for slides -->
-  <div class="carousel-inner" role="listbox">
-    
-    <div ng-repeat="tool in featured track by $index" class="item" ng-class="{active: $first }">
-    	<div class="row">
-    		<div class="col-md-4">
-
-    		</div>
-    		<div class="col-md-4">
-    			<img src="{{tool.image_url}}">
-    		</div>
-    		<div class="col-md-4">
-    			<label>Rating</label>
-    			<div star-rating rating-value="tool.star_average" max="5" is-interactive="false"></div>		    			
-    		</div>
-    		
-    		
-      		
-    		
-    	</div>
 
 
-      
-
-
-
-      <div class="carousel-caption">
-        <h3>{{tool.name}}</h3>
-      </div>
-    
-    </div>
-    
-
-
-  </div>
-
-  <!-- Controls -->
-  <a class="left carousel-control" ng-click="carousel_prev()">
-    <span class="fa fa-chevron-left" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="right carousel-control" role="button" ng-click="carousel_next()">
-    <span class="fa fa-chevron-right" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
 
 	<!--  -->
 
 
+	  <carousel>
+      <slide ng-repeat="tool in featured" active="slide.active">
+        <img ng-src="{{tool.image_url}}" style="margin:auto;" height="440" width="550">
+        <div class="carousel-caption">
+        	<h3>{{tool.name}}</h3>
+        </div>
+      </slide>
+    </carousel>
+
+<!--  -->
 
 	</div>
 </div>
@@ -143,7 +97,8 @@
 				<h3 class="panel-title">Tool tags</h3>
 			</div>
 			<div class="panel-body">
-				<span ng-repeat="tag in system_tags.tags">{{tag.value}} </span>
+				<jqcloud words="system_tags.tags" width="230" height="380" steps="7"></jqcloud>
+
 			</div>
 		</div>
 
