--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,12 +16,74 @@
 				<!-- nav -->
 				<div class="row" id="nav">
 					<div class="col-md-12 text-right">
-						<ul class="list-inline">
+						<div class="btn-group" role="group">
+						  <button type="button" class="btn btn-default btn-sm" ng-click="go_to('/pages/about_tapor');">About</button>
+						  <button type="button" class="btn btn-default btn-sm" ng-click="go_to('/pages/contact');">Contact</button>
+
+						  <div class="btn-group" role="group">
+						    <button type="button" class="btn btn-default dropdown-toggle btn-sm" data-toggle="dropdown" aria-expanded="false">
+						      Explore
+						      <span class="caret"></span>
+						    </button>
+						    <ul class="dropdown-menu" role="menu">
+						      <li><a href="/tools">Tools</a></li>
+						      <li><a href="/lists">Lists</a></li>
+						    </ul>
+						  </div>
+
+						  <div class="btn-group" role="group">
+						    <button type="button" class="btn btn-default dropdown-toggle btn-sm" data-toggle="dropdown" aria-expanded="false">
+						      Help
+						      <span class="caret"></span>
+						    </button>
+						    <ul class="dropdown-menu" role="menu">
+						      <li><a href="/pages/tour">Tour</a></li>
+						      <li><a href="/pages/tutorials">Tutorials</a></li>
+						      <li><a href="/pages/useful_links">Useful links</a></li>
+						    </ul>
+						  </div>
+
+						  <button type="button" class="btn btn-default btn-sm" ng-if="current_user == null" ng-click="go_to('/signin');">Login</button>
+
+						  <div class="btn-group" role="group" ng-if="current_user != null">
+						    <button type="button" class="btn btn-default dropdown-toggle btn-sm" data-toggle="dropdown" aria-expanded="false">
+						      <img src='{{current_user.image_url}}' class="img-circle nav-bar-profile" widht="7px" height="7px">  My TAPoR
+						      <span class="caret"></span>
+						    </button>
+						    <ul class="dropdown-menu" role="menu">
+						      <li><a href="/users/profile">Profile</a></li>
+						      <li><a href="#">My tools</a></li>
+						      <li><a href="/tools/new">Add tool</a></li>
+						      <li><a href="#">My lists</a></li>
+						      <li><a href="/lists/new">Add list</a></li>
+						      <li><a href="/sign_out">Log out</a></li>
+						      
+						    </ul>
+						  </div>
+
+						  <div class="btn-group" role="group" ng-if="current_user.is_admin">
+						    <button type="button" class="btn btn-default dropdown-toggle btn-sm" data-toggle="dropdown" aria-expanded="false">
+						      Admin
+						      <span class="caret"></span>
+						    </button>
+						    <ul class="dropdown-menu" role="menu">
+						      <li><a href="/tools/featured">Featured tools</a></li>
+						      <li><a href="/pages">Pages</a></li>
+						      <li><a href="/attributes/new">Add attribute</a></li>
+						      <li><a href="#">list attributes</a></li>
+						      <li><a href="#">Remap attributes</a></li>
+						      <li><a href="#">List tags</a></li>
+						      <li><a href="/users">Manage users</a></li>
+						    </ul>
+						  </div>
+
+						</div>
+
+<!-- 						<ul class="list-inline">
 							<li>About</li>
 							<li>Tour</li>
 							<li>Tutorials</li>
 							<li>Useful links</li>
-
 							<li>
 								<a href='tools'>Tools</a>
 							</li>		
@@ -62,8 +124,12 @@
 
 								</span>
 							</li>
-						</ul>
+						</ul> -->
+
+
 					</div>
+
+
 				</div>
 				<div class="row" id="header">
 					<div class="col-md-5">
