Fixed tag calls

--- a/app/assets/templates/tapor/index.html
+++ b/app/assets/templates/tapor/index.html
@@ -97,7 +97,7 @@
 				<h3 class="panel-title">Tool tags</h3>
 			</div>
 			<div class="panel-body">
-				<jqcloud words="system_tags.tags" width="230" height="380" steps="7"></jqcloud>
+				<jqcloud words="system_tags" width="230" height="380" steps="7"></jqcloud>
 
 			</div>
 		</div>
