--- a/app/assets/templates/tools/detail.html
+++ b/app/assets/templates/tools/detail.html
@@ -210,14 +210,14 @@
 								</dt>
 								<dd>								
 								<!-- overall rating -->							
-								<div star-rating rating-value="data.star_average" max="5" is-interactive="false"></div>
+								<div star-rating rating-value="data.ratings.system" max="5" is-interactive="false"></div>
 								</dd>
 								<dt ng-if="current_user">
 									Your rating
 								</dt>
 								<dd ng-if="current_user">								
 								<!-- user rating -->							
-									<div star-rating rating-value="data.tool_ratings[0].stars" on-rating-selected="updateRating" max="5" is-interactive="true"></div>
+									<div star-rating rating-value="data.ratings.user" on-rating-selected="update_ratings" max="5" is-interactive="true"></div>
 								</dd>
 
 									
