--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
 						    </button>
 						    <ul class="dropdown-menu" role="menu">
 						      <li><a href="/tools">Tools</a></li>
-						      <li><a href="/lists">Lists</a></li>
+						      <li><a href="/tool_lists">Lists</a></li>
 						    </ul>
 						  </div>
 
@@ -55,7 +55,7 @@
 						      <li><a href="#">My tools</a></li>
 						      <li><a href="/tools/new">Add tool</a></li>
 						      <li><a href="#">My lists</a></li>
-						      <li><a href="/lists/new">Add list</a></li>
+						      <li><a href="/tool_lists/new">Add list</a></li>
 						      <li><a href="/sign_out">Log out</a></li>
 						      
 						    </ul>
