Fixed comments update

--- a/app/assets/templates/tools/detail.html
+++ b/app/assets/templates/tools/detail.html
@@ -182,7 +182,7 @@
 											<label>Your comment</label>
 											<textarea class="form-control vertical-text-area" rows="3" id="inputComment" ng-model="data.comments.user.content" placeholder="A short description of why you recommend this tool"></textarea>
 											</div>
-											<button class="btn btn-primary" ng-click="updateComment()">Save comment</button>
+											<button class="btn btn-primary" ng-click="update_comment()">Save comment</button>
 										
 									</form>
 								</div>
