--- a/app/assets/templates/tapor/index.html
+++ b/app/assets/templates/tapor/index.html
@@ -8,7 +8,7 @@
 	<!--  -->
 
 
-	  <carousel>
+	  <carousel interval="5000">
       <slide ng-repeat="tool in featured" active="slide.active">
         <img ng-src="{{tool.image_url}}" style="margin:auto;" height="440" width="550">
         <div class="carousel-caption">
