Added rich text editor to tool comments

--- a/app/assets/templates/tools/detail.html
+++ b/app/assets/templates/tools/detail.html
@@ -180,10 +180,11 @@
 									<form>
 										<div class="form-group">
 											<label>Your comment</label>
-											<textarea class="form-control vertical-text-area" rows="3" id="inputComment" ng-model="data.comments.user.content" placeholder="A short description of why you recommend this tool"></textarea>
-											</div>
+
+											<textarea ui-tinymce="tinymceOptions" ng-model="data.comments.user.content"></textarea>
+
 											<button class="btn btn-primary" ng-click="update_comment()">Save comment</button>
-										
+										</div>										
 									</form>
 								</div>
 							</div>
