Attribute types render correctly when editing Need to fix creation receiving new models Need to add rendering when displaying

--- a/app/assets/templates/tools/edit.html
+++ b/app/assets/templates/tools/edit.html
@@ -173,7 +173,7 @@
         <label for="inputCreatorsURL" class="col-sm-2 control-label">Suggested tools</label>
 
         <!-- All tools -->
-        <div class="col-sm-3">
+<!--         <div class="col-sm-3">
           <div class="panel panel-default">
             <div class="panel-heading">
               Tools
@@ -195,9 +195,9 @@
               </ul>
             </div>
             </div>
-        </div>
+        </div> -->
       
-      <!-- pinned -->
+      <!-- Suggested -->
       <div class="col-sm-3">
         <div class="panel panel-default">
           <div class="panel-heading">
@@ -224,10 +224,10 @@
 
     <!-- attributes -->
 
-    <div class="form-group" ng-repeat='attribute in data.tool_attributes track by $index' >
+    <div class="form-group" ng-repeat='attribute in data.tool_attributes' >
       <label for="inputName" class="col-sm-2 control-label">{{attribute.name}}</label>
       <div class="col-sm-6">
-         <div multselect is-multiple="attribute.is_multiple" model="attribute.model" name="attribute.name" values="attribute.attribute_values"> </div>
+         <div multselect is-multiple="attribute.is_multiple" model="attribute.model" name="attribute.name" values="attribute.possible_values"> </div>
       </div>
     </div>
    
