Started paginating tools

--- a/app/assets/templates/tools/edit.html
+++ b/app/assets/templates/tools/edit.html
@@ -173,7 +173,7 @@
         <label for="inputCreatorsURL" class="col-sm-2 control-label">Suggested tools</label>
 
         <!-- All tools -->
-<!--         <div class="col-sm-3">
+       <div class="col-sm-3">
           <div class="panel panel-default">
             <div class="panel-heading">
               Tools
@@ -195,7 +195,7 @@
               </ul>
             </div>
             </div>
-        </div> -->
+        </div>
       
       <!-- Suggested -->
       <div class="col-sm-3">
